--- a/Angular/src/components/navbar/navbar.component.html
+++ b/Angular/src/components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
                 </li>
                 <li *ngIf="!navUser" class="nav-item">
                     <a href="/login" class="nav-link"><i class="nc-icon nc-layout-11"></i>Login</a>
+                    <a href="/register" class="nav-link"><i class="nc-icon nc-layout-11"></i>Register</a>
                 </li>
             </ul>
         </div>
