--- a/Angular/src/components/navbar/navbar.component.html
+++ b/Angular/src/components/navbar/navbar.component.html
@@ -7,6 +7,7 @@
             <ul class="navbar-nav ml-auto">
                 <li *ngIf="navUser" class="nav-item">
                     <span>Hello, {{navUser.name}}</span>
+                    <a href="" (click)="logout()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Log out</a>
                 </li>
                 <li *ngIf="!navUser" class="nav-item">
                     <a href="/login" class="nav-link"><i class="nc-icon nc-layout-11"></i>Login</a>
