--- a/Angular/src/components/navbar/navbar.component.html
+++ b/Angular/src/components/navbar/navbar.component.html
@@ -1,19 +1,6 @@
-<nav class="navbar navbar-expand fixed-top navbar-transparent" color-on-scroll="500">
-    <div class="container">
-        <div class="navbar-translate">
-            <a class="navbar-brand">Sugar.com</a>
-        </div>
-        <div id="navbarToggler">
-            <ul class="navbar-nav ml-auto">
-                <li *ngIf="navUser" class="nav-item">
-                    <span>Hello, {{navUser.name}}</span>
-                    <a href="" (click)="logout()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Log out</a>
-                </li>
-                <li *ngIf="!navUser" class="nav-item">
-                    <a href="/login" class="nav-link"><i class="nc-icon nc-layout-11"></i>Login</a>
-                    <a href="/register" class="nav-link"><i class="nc-icon nc-layout-11"></i>Register</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<nav class="navbar">
+    <a routerLink="/">Home</a>
+    <a routerLink="/login">Login</a>
+    <a routerLink="/register">Register</a>
+  </nav>
+  
