browser error fixes + renaming convintion

--- a/Angular/src/app/components/navbar/navbar.component.html
+++ b/Angular/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar">
-    <a routerLink="/">Home</a>
-    <a routerLink="/login">Login</a>
-    <a routerLink="/register">Register</a>
-  </nav>
-  
+  <a class="navbar-brand" href="#">Dental Clinic</a>
+  <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">Home</a>
+      <a class="nav-item nav-link" href="#">Services</a>
+      <a class="nav-item nav-link" href="#">About Us</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
+  </div>
+</nav>
