--- a/Angular/src/app/pages/home-page/home-page.component.html
+++ b/Angular/src/app/pages/home-page/home-page.component.html
@@ -1,22 +1,15 @@
 <div class="wrapper">
-    <navbar [navUser]="user"></navbar>
-    <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
-        <div class="filter"></div>
-        <div class="content-center">
-            <div class="container">
-                <div class="title-brand">
-                    <h1 class="presentation-title">Sugar.com</h1>
-                    <div class="fog-low">
-                        <img src="assets/img/fog-low.png" alt="">
-                    </div>
-                    <div class="fog-low right">
-                        <img src="assets/img/fog-low.png" alt="">
-                    </div>
-                </div>
-
-                <h2 class="presentation-subtitle text-center">Come up with a catchphrase</h2>
+    <app-navbar [navUser]="user"></app-navbar>
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand">
+                <h1 class="presentation-title">Dental Clinic</h1>
             </div>
+
+            <h2 class="presentation-subtitle text-center">Welcome to our clinic. Your smile is our priority.</h2>
+            <p>Services: Teeth Cleaning, Dental Checkups, Teeth Whitening, etc.</p>
+            <p>Working Hours: Monday to Friday, 9 AM to 5 PM</p>
+            <p>Contact: 123-456-7890</p>
         </div>
-        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
     </div>
 </div>
