--- a/Angular/src/app/pages/register-page/register-page.component.html
+++ b/Angular/src/app/pages/register-page/register-page.component.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                     <div class="card card-register">
                         <h3 class="title">Welcome</h3>
-                        <form class="register-form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                             <label>Email</label>
                             <div class="input-group form-group-no-border">
                                 <div class="input-group-prepend">
